# kernel_modules

./: README.md  make.md
cdevcpuinfo/: BUILD.bazel  Makefile  cdevcpuinfo.c
cpuinfo/: BUILD.bazel  Makefile  cpuinfo.c
hello/: BUILD.bazel  Makefile  hello.c  modules.order
hookmodule/: BUILD.bazel  Makefile  ftracehook.c  ftracehook.h  kprobehook.c  kprobehook.h  main.c  systemtabhook.c  systemtabhook.h  uprobehook.c  uprobehook.h
proccpuinfo/: BUILD.bazel  proccpuinfo.c
sysmodule/: BUILD.bazel  Makefile  sysmodule.c
